[tool.poetry]
name = "dashcam"
version = "0.1.0"
description = "Generates timelapse summary videos from raw dashcam video"
authors = ["Jason Lynch <jason@aexoden.com>"]
readme = "README.rst"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
mercantile = "^1.2.1"
requests = "^2.28.2"
Pillow = "^9.5.0"
progressbar2 = "^4.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
rstcheck = "^6.1.2"
poetryup = "^0.12.7"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
