[tool.poetry]
name = "dashcam"
version = "0.1.0"
description = "Generates timelapse summary videos from raw dashcam video"
authors = ["Jason Lynch <jason@aexoden.com>"]
readme = "README.rst"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
mercantile = "^1.2.1"
requests = "^2.31.0"
Pillow = "^10.0.1"
progressbar2 = "^4.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
rstcheck = "^6.2.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
